--- a/Tarea_16Feb/package.json
+++ b/Tarea_16Feb/package.json
@@ -7,5 +7,8 @@
     "test": "jest"
   },
   "author": "johaG",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine": "^4.0.2"
+  }
 }
